<resources>
    <string name="app_name">PersonasBaseDeDatos</string>
    <string name="registrar">Registrar</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="buscar">BUSCAR</string>
    <string name="apellido">Apellido</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="pasatiempo">Pasatiempo</string>
    <string name="programar">Programar</string>
    <string name="leer">Leer</string>
    <string name="bailar">Bailar</string>
    <string name="guardar">GUARDAR</string>
    <string name="modificar">MODIFICAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="borrar">BORRAR</string>
    <string name="listado_tablas">Listado Tablas</string>
    <string name="listado">Listado</string>
    <string name="numero">N°</string>
    <string name="error1">Digite la cedula</string>
    <string name="error2">Digite el nombre</string>
    <string name="error3">Digite el apellido</string>
    <string name="mensaje1">Seleccione por lo menos un pasatiempo</string>
    <string name="mensaje2">Persona guardada exitosamente!</string>
    <string name="mensaje3">Persona eliminada exitosamente!</string>
    <string name="errorpasatiempo">Por favor seleccione un pasatiempo</string>
    <string-array name="opciones_principal">
        <item>@string/registrar</item>
        <item>@string/listado_tablas</item>
        <item>@string/listado</item>
    </string-array>
</resources>
